3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Tell player whether she's the transport's captain or not.
 server/apply.c
Ryo 2006-08-07

Commit patch #1389033 (Large-value coins) courtesy Lalo Martins
 server/shop.c: accept jade & amber coins, never give'em back.
Ryo 2006-08-07

Fix bug #1534727 (create_home_portals TRUE doesn't work)
 server/init.c: wrong variable changed.
Ryo 2006-08-05

Committed patch #1389432 (Per-race HallOfSelection) courtesy Lalo Martins.
Modified files:
 include/global.h
 common/init.c
 server/server.c player.c
Rebuilt archetypes and treasures.
Ryo 2006-08-05

plugins/cfpython/cfpython.c, plugins/cfpython/cfpython_object.c,
    plugins/cfpython/include/cfpython_object_private.h: Modify
    Crossfire_Object_wrap() to use the hash tables provided by hashtable.c
    to avoid creating more python wrapper objects than is needed.
Alex Schultz 2006-07-29

common/object.c: fix bug #1526364 (stacking Royal Guards). Use find_free_spot
 to place dropped items if living. Also fix indent of function free_object2.
server/c_object.c: fix bug #1529969 (shop floor not working in random maps).
Ryo 2006-07-29

server/c_wiz.c: fix addexp not working on skills.
server/time.c: don't crash if duplicator doesn't have other_arch set.
Ryo 2006-07-28

plugins/common/hashtable.c, plugins/common/include/hashtable.h, 
    plugins/common/Makefile.am, plugins/common/include/Makefile.am,
    plugins/cfpython/Makefile.am: Add hashtable.c, to add ptr-to-ptr hash tables
    for plugins to use. (Useful to use a cf object as a key for the table)
plugins/cfpython/include/cfpython.h: Include compile.h which Python.h doesn't